add assuming of types to multiple parsers - DefineSharedConstantParser - DefineSharedVariableParser - DefineSlotAccessParser - DefSlottedExemplarParser - MethodDefinitionParser - MethodDefinitionUsageParser also add more comprehensive understanding of read/write & public/private variations (according to Magik docs) "methods" coming from shared constants etc. are being marked now documentation/types for slots & methods is available in more cases added assuming types of .new() and .init() method definitions & invocations